Accessories compat, some other fixes/improvements